# albicilla

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  conv-format.md  pyproject.toml
.internal/: ogloszenie.md
docs/: conversion.md  goose-chat-cleanup.md  integration-check.md  sessions.md
src/albicilla/: __init__.py  app.py  config.py  logging.py  main.py  models.py  responders.py  session.py  upstream.py
src/conv/: __init__.py  anonymize.py  cleanup.py  integrity.py  main.py  models.py  processor.py  scenario.py  tool_usage.py
tests/: conftest.py  test_conv.py  test_integrity_analysis.py  test_logging_async.py  test_output_integrity.py  test_proxy.py  test_proxy_integration.py  test_streaming_context.py
